--- a/onlineTutorial/templates/startexam.html
+++ b/onlineTutorial/templates/startexam.html
@@ -20,8 +20,8 @@
     </div> -->
 
     <div class="main">
-      <input type="hidden" name="" id="startTime" value="Aug. 13, 2021, 22:03:00">
-      <input type="hidden" name="duration" id="durations" value="120">
+      <input type="hidden" name="" id="startTime" value="{{exam_details.time}}">
+      <input type="hidden" name="duration" id="durations" value="{{exam_details.durations}}">
         <div class="navbar border-bottom d-flex justify-content-between">
             <img src="{% static 'logos/logo.png'%}" class="float-md-start mb-0" style="height:4em">
             <time class="float-md-start mb-0 mx-3   "></time>
