kamal's update + exam portal updates-2

--- a/onlineTutorial/templates/base.html
+++ b/onlineTutorial/templates/base.html
@@ -34,7 +34,7 @@
               <ul class="nav me-auto">
                 <li class="nav-item"><a href="/" class="nav-link link-light px-2 active" aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="/physics/" class="nav-link link-light px-2">Physics</a></li>
-                <li class="nav-item"><a href="/chemistry/" class="nav-link link-light px-2">Chemistry</a></li>
+                <li class="nav-item"><a href="/examinations/" class="nav-link link-light px-2">Examinations</a></li>
                 <li class="nav-item"><a href="/Maths/" class="nav-link link-light px-2">Maths</a></li>
                 <li class="nav-item"><a href="/support/" class="nav-link link-light px-2">Support</a></li>
               </ul>
