--- a/onlineTutorial/templates/data.html
+++ b/onlineTutorial/templates/data.html
@@ -94,7 +94,7 @@
       {% endfor %}
     </ul>
 
-    <span href="#" class="nav-link h4 w-100 mb-5">
+    <span href="#" class="nav-link h4 sociallink">
       <a href=""><i class="bx bxl-instagram-alt text-white"></i></a>
       <a href=""><i class="bx bxl-twitter px-2 text-white"></i></a>
       <a href=""><i class="bx bxl-facebook text-white"></i></a>
@@ -104,7 +104,7 @@
   <!-- Main Wrapper -->
   <div class="p-1 my-container active-cont">
     <!-- Top Nav -->
-    <nav class="navbar top-navbar navbar-dark bg-dark px-5">
+    <nav class="navbar top-navbar navbar-dark bg-dark px-5" style="height: 53px;">
       <a class="btn border-0" id="menu-btn"><i class="bx bx-menu"></i></a>
       <ul class="nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
