--- a/onlineTutorial/templates/index.html
+++ b/onlineTutorial/templates/index.html
@@ -44,7 +44,7 @@
       <nav class="nav nav-masthead justify-content-center float-md-end mt-4">
         <!-- <a class="nav-link active" href="/" style="color: black;">Home</a> -->
         <a class="nav-link" href="/physics/" style="color: black;">Physics</a>
-        <a class="nav-link" href="/chemistry/" style="color: black;">Chemistry</a>
+        <a class="nav-link" href="/examinations/" style="color: black;">Examinations</a>
         <a class="nav-link" href="/maths/" style="color: black;">Math</a>
         {% if user.is_authenticated %}
           {% if not user.fees %}
