--- a/onlineTutorial/templates/courses.html
+++ b/onlineTutorial/templates/courses.html
@@ -90,7 +90,7 @@
       {% endfor %}
     </ul>
 
-    <span href="#" class="nav-link h4 w-100 mb-5">
+    <span href="#" class="nav-link h4 sociallink">
       <a href=""><i class="bx bxl-instagram-alt text-white"></i></a>
       <a href=""><i class="bx bxl-twitter px-2 text-white"></i></a>
       <a href=""><i class="bx bxl-facebook text-white"></i></a>
