--- a/onlineTutorial/templates/result.html
+++ b/onlineTutorial/templates/result.html
@@ -9,7 +9,7 @@
 {%block content%}
 <h6>Result:  {{finalresult}}</h6>
 <div class="container">
-    <table class="table table-striped" style="width:100%" name="1" id="teranaam">
+    <table class="table table-striped border-dark" style="width:100%" name="1" id="teranaam">
         <thead>
           <tr>
             <th scope="col">#</th>
