--- a/onlineTutorial/templates/userplans.html
+++ b/onlineTutorial/templates/userplans.html
@@ -22,7 +22,7 @@
       </div>
       <div class="card-block">
         <h4 class="card-title"> 
-          Try Now
+          Free Trial
         </h4>
         <ul class="list-group">
           <li class="list-group-item">Lectures Video/Notes</li>
