--- a/onlineTutorial/templates/courses.html
+++ b/onlineTutorial/templates/courses.html
@@ -19,7 +19,7 @@
   <!-- Side-Nav -->
   <div class="side-navbar active-nav d-flex justify-content-between flex-wrap flex-column" id="sidebar">
     <ul class="nav flex-column text-white w-100">
-      <a href="#" class="nav-link h3 text-white my-2">
+      <a href="/" class="nav-link h3 text-white my-2">
         <img src="https://www.rkeduv.com/static/logos/logo.png"  alt="" style="height: 4em; width: auto">
       </a>
       {% for chapter in allChapters %} 
