--- a/onlineTutorial/templates/base.html
+++ b/onlineTutorial/templates/base.html
@@ -39,9 +39,10 @@
               <ul class="nav me-auto">
                 <li class="nav-item"><a href="/" class="nav-link link-light px-2 " aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="/physics/" class="nav-link link-light px-2">Physics</a></li>
+                <li class="nav-item"><a href="/finance/user-plan/" class="nav-link link-light">Plans</a></li>
                 <li class="nav-item"><a href="/examinations/" id="exam" class="nav-link link-light px-2">Examinations</a></li>
-                <li class="nav-item"><a href="/Maths/" class="nav-link link-light px-2">Maths</a></li>
-                <li class="nav-item"><a href="/support/" class="nav-link link-light px-2">Support</a></li>
+                <!-- <li class="nav-item"><a href="/Maths/" class="nav-link link-light px-2">Maths</a></li>
+                <li class="nav-item"><a href="/support/" class="nav-link link-light px-2">Support</a></li> -->
               </ul>
               <ul class="nav">
                 
@@ -50,7 +51,7 @@
                         Accounts
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="/accounts/profile/">My Profile</a></li>
+                        <li><a class="dropdown-item disabled" href="/accounts/profile/">My Profile</a></li>
                         <li><a class="dropdown-item" href="/accounts/changepassword/">Change Password</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="/accounts/logout/">Logout</a></li>
