--- a/onlineTutorial/templates/index.html
+++ b/onlineTutorial/templates/index.html
@@ -44,14 +44,11 @@
       <nav class="nav nav-masthead justify-content-center float-md-end mt-4">
         <!-- <a class="nav-link active" href="/" style="color: black;">Home</a> -->
         <a class="nav-link" href="/physics/" style="color: black;">Physics</a>
-        <a class="nav-link" href="/examinations/" style="color: black;">Examinations</a>
-        <a class="nav-link" href="/maths/" style="color: black;">Math</a>
+        <!-- <a class="nav-link" href="/examinations/" style="color: black;">Examinations</a> -->
+        <!-- <a class="nav-link" href="/maths/" style="color: black;">Math</a> -->
         {% if user.is_authenticated %}
-          {% if not user.fees %}
           <a class="nav-link " href="/finance/user-plan/" aria-current="page" style="color: black;">Plans</a>
-          {% else %}
           <a class="nav-link " href="/examinations/" aria-current ="page" style="color:black;">Examinations</a>
-          {% endif %}
           {% if user.is_admin %}
             <a class="nav-link " href="/admin/" aria-current="page" style="color: black;">Admin</a>
           {% endif %}
