exam result update

--- a/onlineTutorial/templates/allresult.html
+++ b/onlineTutorial/templates/allresult.html
@@ -24,7 +24,7 @@
           <tr>
             <th scope="row">{{data.sno}}</th>
             <td>{{data.name}}</td>
-            <td><a href="examinations/result{{data.id}}/">Click here</a></td>
+            <td><a href="/examinations/result{{data.id}}/">Click here</a></td>
             
           </tr>
           {% endfor %}
