index page update

--- a/onlineTutorial/templates/index.html
+++ b/onlineTutorial/templates/index.html
@@ -49,6 +49,7 @@
         {% if user.is_authenticated %}
           <a class="nav-link " href="/finance/user-plan/" aria-current="page" style="color: black;">Plans</a>
           <a class="nav-link " href="/examinations/" aria-current ="page" style="color:black;">Examinations</a>
+          <a class="nav-link " href="/examinations/results/" aria-current ="page" style="color:black;">Result</a>
           {% if user.is_admin %}
             <a class="nav-link " href="/admin/" aria-current="page" style="color: black;">Admin</a>
           {% endif %}
