--- a/onlineTutorial/templates/startexam.html
+++ b/onlineTutorial/templates/startexam.html
@@ -125,7 +125,25 @@
                     <button type="button" id="flatBtn" onclick="markflag()">Mark Flag</button>
                     <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
                     <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
-                    <button type="submit" >submit</button>
+                    <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" >Submit</button>
+                  </div>
+                </div>
+               <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Exam Submission</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        Are you sure you want to submit your exam?
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Save changes</button>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <!-- Circles which indicates the steps of the form: -->
@@ -151,3 +169,4 @@
     <script src="{% static 'js/startexam.js' %}"></script>
   </body>
 </html>
+ 
