--- a/onlineTutorial/templates/base.html
+++ b/onlineTutorial/templates/base.html
@@ -32,7 +32,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'logos/favicon_io/favicon-16x16.png' %}">
     <link rel="manifest" href="{% static 'logos/favicon_io/site.webmanifest' %}">
   </head>
-  <body onload="myfun()">
+  <body >
       <div class="">
         <nav class="py-2 bg-dark border-bottom" >
             <div class="container d-flex flex-wrap">
