--- a/onlineTutorial/templates/courses.html
+++ b/onlineTutorial/templates/courses.html
@@ -42,7 +42,7 @@
                     </a>
                 </div>
                 <div class="card card-body">
-                    <a href="#">
+                    <a href="/physics/hcverma/chapterId={{chapter.chapterId}}/">
                         <i class="bx bxs-dashboard"></i>
                         <span class="mx-0">HC Verma</span>
                     </a>
