--- a/onlineTutorial/templates/data.html
+++ b/onlineTutorial/templates/data.html
@@ -45,7 +45,7 @@
                     </a>
                 </div>
                 <div class="card card-body">
-                    <a href="/physics/hcverma/">
+                    <a href="/physics/hcverma/chapterId={{chapter.chapterId}}/">
                         <i class="bx bxs-dashboard"></i>
                         <span class="mx-0">HC Verma</span>
                     </a>
