practice set update

--- a/onlineTutorial/templates/courses.html
+++ b/onlineTutorial/templates/courses.html
@@ -48,9 +48,9 @@
                     </a>
                 </div>
                 <div class="card card-body">
-                    <a href="#">
+                    <a href="/physics/advancearchieve/chapterId={{chapter.chapterId}}/">
                         <i class="bx bxs-dashboard"></i>
-                        <span class="mx-0">Practice Paper</span>
+                        <span class="mx-0">Advance Archieve</span>
                     </a>
                 </div>
             </div>
