--- a/onlineTutorial/templates/courses.html
+++ b/onlineTutorial/templates/courses.html
@@ -30,7 +30,7 @@
             </a>
             <div class="collapse show" id="collapseExample{{chapter.chapterId}}">
                 <div class="card card-body">
-                    <a href="/physics/chapterId={{chapter.chapterId}}/">
+                    <a href="{{urlhead}}chapterId={{chapter.chapterId}}/">
                         <i class="bx bxs-dashboard"></i>
                         <span class="mx-0">Lectures</span>
                     </a>
@@ -62,25 +62,25 @@
             </a>
             <div class="collapse" id="collapseExample{{chapter.chapterId}}">
                 <div class="card card-body">
-                    <a href="/physics/chapterId={{chapter.chapterId}}/">
+                    <a href="{{urlhead}}chapterId={{chapter.chapterId}}/">
                         <i class="bx bxs-dashboard"></i>
                         <span class="mx-0">Lectures</span>
                     </a>
                 </div>
                 <div class="card card-body">
-                    <a href="/physics/ncert/">
+                    <a href="{{urlhead}}ncert/">
                         <i class="bx bxs-dashboard"></i>
                         <span class="mx-0">NCERT</span>
                     </a>
                 </div>
                 <div class="card card-body">
-                    <a href="/physics/hcverma/">
+                    <a href="{{urlhead}}hcverma/">
                         <i class="bx bxs-dashboard"></i>
                         <span class="mx-0">H C Verma</span>
                     </a>
                 </div>
                 <div class="card card-body">
-                    <a href="/physics/practicepaper/">
+                    <a href="{{urlhead}}practicepaper/">
                         <i class="bx bxs-dashboard"></i>
                         <span class="mx-0">Practice Paper</span>
                     </a>
