--- a/onlineTutorial/templates/index.html
+++ b/onlineTutorial/templates/index.html
@@ -42,10 +42,8 @@
         <img src="{% static 'logos/logo.png' %}" href="/" class="float-md-start mb-0" style="height:4em" >
       </a>
       <nav class="nav nav-masthead justify-content-center float-md-end mt-4">
-        <!-- <a class="nav-link active" href="/" style="color: black;">Home</a> -->
-        <a class="nav-link" href="/physics/" style="color: black;">Physics</a>
-        <!-- <a class="nav-link" href="/examinations/" style="color: black;">Examinations</a> -->
-        <!-- <a class="nav-link" href="/maths/" style="color: black;">Math</a> -->
+        <a class="nav-link" href="/physics/jee/" style="color: black;">JEE Physics</a>
+        <a class="nav-link" href="/physics/neet/" style="color: black;">NEET Physics</a>
         {% if user.is_authenticated %}
           <a class="nav-link " href="/finance/user-plan/" aria-current="page" style="color: black;">Plans</a>
           <a class="nav-link " href="/examinations/" aria-current ="page" style="color:black;">Examinations</a>
@@ -74,7 +72,7 @@
   </main>
 
   <footer class="mt-auto text-white-50">
-    <p>CopyRight Reserved <a href="https://getbootstrap.com/" class="text-white mx-1">Terms & Condition</a>& <a href="https://twitter.com/mdo" class="text-white"> Privacy</a>.</p>
+    <p>CopyRight Reserved <a href="https://www.youtube.com/c/LawsofNature" class="text-white mx-1">Terms & Condition</a>& <a href="https://www.youtube.com/c/LawsofNature" class="text-white"> Privacy</a>.</p>
   </footer>
 </div>
  
