--- a/onlineTutorial/templates/contactus.html
+++ b/onlineTutorial/templates/contactus.html
@@ -5,35 +5,35 @@
 {% endblock %}
 {%block content%}
 <div class="bg-light">
-    <div class="container">
-        <div class="row justify justify-content-center">
+    <div class="container" style="margin-left: 30vw;">
+        <div class="justify justify-content-center">
             <div class="col-11 col-md-8 col-lg-6 col-xl-5">
                 <form class="" method="POST">
                     {% csrf_token%}
                     <div class="card bg-dark">
-                        <div class="row mt-0">
+                        <div class="">
                             <div class="col-md-12 ">
                                 <h4 class="">Contact Us</h4>
                                 <p>Use the form below to share your questions, ideas, comments and feedback</p>
                             </div>
                         </div>
-                        <div class="form-group row mb-3">
+                        <div class="form-group  mb-3">
                             <div class="col-md-12 mb-0">
                                 <select class="form-select" aria-label="Default select example" name="issue">
                                     <option selected>Select Your issue</option>
                                     <option value="1">Technical/Website Related Issues</option>
                                     <option value="2">Payment Issues</option>
                                     <option value="3">Content Issues</option>
-                                    <option value="4">Doubts</option>
+                                    <option value="4">Others</option>
                                   </select>
                             </div>
                         </div>
-                        <div class="form-group row">
+                        <div class="form-group ">
                             <div class="col-md-12 mb-2">
                                 <p class="mb-1">Message</p> <textarea id="message" type="text" placeholder="Enter your message" name="message" class="form-control input-box rm-border"></textarea>
                             </div>
                         </div>
-                        <div class="form-group row justify-content-center mb-0">
+                        <div class="form-group justify-content-center mb-0">
                             <div class="col-md-12 px-3"> <input type="submit" value="Submit" class="btn btn-block btn-purple rm-border"> </div>
                         </div>
                     </div>
@@ -42,4 +42,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock %} 
