--- a/onlineTutorial/templates/courses.html
+++ b/onlineTutorial/templates/courses.html
@@ -131,6 +131,7 @@
                 <i class="bi bi-person-fill"></i> Accounts
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="/support/">Support</a></li>
               <li><a class="dropdown-item" href="/finance/user-plan/">Change Plan</a></li>
               <li><a class="dropdown-item" href="/accounts/changepassword/">Change Password</a></li>
               <li><hr class="dropdown-divider"></li>
