--- a/onlineTutorial/templates/base.html
+++ b/onlineTutorial/templates/base.html
@@ -52,6 +52,7 @@
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item disabled" href="/accounts/profile/">My Profile</a></li>
+                        <li><a class="dropdown-item" href="/support/">Support</a></li>
                         <li><a class="dropdown-item" href="/accounts/changepassword/">Change Password</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="/accounts/logout/">Logout</a></li>
@@ -80,7 +81,7 @@
     {% endblock %}
     <footer class="container border-top py-3" style="  width: 100%; height: 1vw;">
         <p class="float-end"><a href="#">Back to top</a></p>
-        <p>&copy; 2021–2022 Rkeduv, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2021–2022 Rkeduv, Inc. &middot; <a href="/privacy/">Privacy</a> &middot; <a href="/termsandcondition/">Terms</a></p>
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
