--- a/onlineTutorial/templates/index.html
+++ b/onlineTutorial/templates/index.html
@@ -72,7 +72,7 @@
   </main>
 
   <footer class="mt-auto text-white-50">
-    <p>CopyRight Reserved <a href="https://www.rkeduv.com/termsandcondition/" class="text-white mx-1">Terms & Condition</a>& <a href="https://www.rkeduv.com/privacy/" class="text-white"> Privacy</a> | <a href="https://www.rkeduv.com/support/" class="text-white"> Support</a</p>
+    <p>CopyRight Reserved <a href="https://www.rkeduv.com/termsandcondition/" class="text-white mx-1">Terms & Condition</a>& <a href="https://www.rkeduv.com/privacy/" class="text-white"> Privacy</a> | <a href="https://www.rkeduv.com/aboutus/" class="text-white"> About Us</a</p>
   </footer>
 </div>
  
