--- a/onlineTutorial/templates/register.html
+++ b/onlineTutorial/templates/register.html
@@ -31,6 +31,10 @@
           font-size: 3.5rem;
         }
       }
+
+      li{
+        color: red;
+      }
     </style>
     <!-- Custom styles for this template -->
     <link href="{% static 'css/signin.css' %}" rel="stylesheet">
