--- a/onlineTutorial/templates/register.html
+++ b/onlineTutorial/templates/register.html
@@ -46,6 +46,7 @@
             {% csrf_token %}
             <img class="mb-4" src="{% static 'logos/RK5.png' %}" alt="" width="72">
             <h4 class="h4 mb-3 fw-normal">Please Register here</h4>
+            <p style="color: red;">{{error}}</p>
             {{form.as_p}}
             <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
             <div class="d-flex justify-content-end">
