--- a/onlineTutorial/templates/successPayment.html
+++ b/onlineTutorial/templates/successPayment.html
@@ -12,5 +12,6 @@
    <h3>Name: {{name}}</h3>
     <h3>Plan: {{plan}}</h3>
     <h3>Amount: {{amount}}</h3>
+    <p>Move to Homepage</p><a href="/">Click here</a>
 </body>
 </html>
