--- a/onlineTutorial/templates/base.html
+++ b/onlineTutorial/templates/base.html
@@ -38,7 +38,7 @@
             <div class="container d-flex flex-wrap">
               <ul class="nav me-auto">
                 <li class="nav-item"><a href="/" class="nav-link link-light px-2 " aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="/physics/" class="nav-link link-light px-2">Physics</a></li>
+                <li class="nav-item"><a href="/physics/jee/" class="nav-link link-light px-2">Physics</a></li>
                 <li class="nav-item"><a href="/finance/user-plan/" class="nav-link link-light">Plans</a></li>
                 <li class="nav-item"><a href="/examinations/" id="exam" class="nav-link link-light px-2">Examinations</a></li>
                 <!-- <li class="nav-item"><a href="/Maths/" class="nav-link link-light px-2">Maths</a></li>
